--- a/financial_test.ipynb
+++ b/financial_test.ipynb
@@ -308,8 +308,183 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "262bf958",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import dotenv\n",
+    "from dotenv import load_dotenv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "6d9687e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "README.md                 \u001b[34mdocuments_04_06\u001b[m\u001b[m/          structured_data_all.json\n",
+      "\u001b[34m__pycache__\u001b[m\u001b[m/              financial_model.py        \u001b[34mtools\u001b[m\u001b[m/\n",
+      "app.py                    financial_test.ipynb      websearchtool.ipynb\n",
+      "chain_scoo.py             key.env\n",
+      "chaining_csoo.ipynb       \u001b[34mmyenv\u001b[m\u001b[m/\n"
+     ]
+    }
+   ],
+   "source": [
+    "ls"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "8d621bfd",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "load_dotenv(\"key.env\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "id": "6ede2530",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "'AIzaSyBkw-pAnVQ7_PKsb8_IO0BRYkxcSTVknXg'"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import os\n",
+    "os.getenv(\"GEMINI_API_KEY\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "c4ee7299",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def flatten_json(json_obj, parent_key='', sep='_'):\n",
+    "    \"\"\"Flattens a nested JSON object into a single dictionary.\"\"\"\n",
+    "    items = []\n",
+    "    for k, v in json_obj.items():\n",
+    "        new_key = parent_key + sep + k if parent_key else k\n",
+    "        if isinstance(v, dict):\n",
+    "            items.extend(flatten_json(v, new_key, sep=sep).items())\n",
+    "        else:\n",
+    "            items.append((new_key, v))\n",
+    "    return dict(items)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ebcd31e9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'report_date': '2014-09-27', 'section': 'profit_and_loss', 'net_sales_products': None, 'net_sales_services': None, 'net_sales_total': 182795, 'cost_of_sales_products': None, 'cost_of_sales_services': None, 'cost_of_sales_total': 112258, 'gross_margin': 70537, 'operating_expenses_research_and_development': 6041, 'operating_expenses_selling_general_and_administrative': 11993, 'operating_expenses_total': 18034, 'operating_income': 52503, 'other_income_or_expense_net': 980, 'income_before_tax': 53483, 'tax_provision': 13973, 'net_income': 39510, 'earnings_per_share_basic': 6.49, 'earnings_per_share_diluted': 6.45, 'shares_used_in_computing_eps_basic': 6085572, 'shares_used_in_computing_eps_diluted': 6122663}\n",
+      "{'report_date': '2015-09-26', 'section': 'profit_and_loss', 'net_sales_products': None, 'net_sales_services': None, 'net_sales_total': 233715, 'cost_of_sales_products': None, 'cost_of_sales_services': None, 'cost_of_sales_total': 140089, 'gross_margin': 93626, 'operating_expenses_research_and_development': 8067, 'operating_expenses_selling_general_and_administrative': 14329, 'operating_expenses_total': 22396, 'operating_income': 71230, 'other_income_or_expense_net': 1285, 'income_before_tax': 72515, 'tax_provision': 19121, 'net_income': 53394, 'earnings_per_share_basic': 9.28, 'earnings_per_share_diluted': 9.22, 'shares_used_in_computing_eps_basic': 5753421, 'shares_used_in_computing_eps_diluted': 5793069}\n",
+      "{'report_date': '2016-09-24', 'section': 'profit_and_loss', 'net_sales_products': None, 'net_sales_services': None, 'net_sales_total': 215639, 'cost_of_sales_products': None, 'cost_of_sales_services': None, 'cost_of_sales_total': 131376, 'gross_margin': 84263, 'operating_expenses_research_and_development': 10045, 'operating_expenses_selling_general_and_administrative': 14194, 'operating_expenses_total': 24239, 'operating_income': 60024, 'other_income_or_expense_net': 1348, 'income_before_tax': 61372, 'tax_provision': 15685, 'net_income': 45687, 'earnings_per_share_basic': 8.35, 'earnings_per_share_diluted': 8.31, 'shares_used_in_computing_eps_basic': 5470820, 'shares_used_in_computing_eps_diluted': 5500281}\n",
+      "{'report_date': '2017-09-30', 'section': 'profit_and_loss', 'net_sales_products': None, 'net_sales_services': None, 'net_sales_total': 229234, 'cost_of_sales_products': None, 'cost_of_sales_services': None, 'cost_of_sales_total': 141048, 'gross_margin': 88186, 'operating_expenses_research_and_development': 11581, 'operating_expenses_selling_general_and_administrative': 15261, 'operating_expenses_total': 26842, 'operating_income': 61344, 'other_income_or_expense_net': 2745, 'income_before_tax': 64089, 'tax_provision': 15738, 'net_income': 48351, 'earnings_per_share_basic': 9.27, 'earnings_per_share_diluted': 9.21, 'shares_used_in_computing_eps_basic': 5217242, 'shares_used_in_computing_eps_diluted': 5251692}\n",
+      "{'report_date': '2018-09-29', 'section': 'profit_and_loss', 'net_sales_products': 225847, 'net_sales_services': 39748, 'net_sales_total': 265595, 'cost_of_sales_products': 148164, 'cost_of_sales_services': 15592, 'cost_of_sales_total': 163756, 'gross_margin': 101839, 'operating_expenses_research_and_development': 14236, 'operating_expenses_selling_general_and_administrative': 16705, 'operating_expenses_total': 30941, 'operating_income': 70898, 'other_income_or_expense_net': 2005, 'income_before_tax': 72903, 'tax_provision': 13372, 'net_income': 59531, 'earnings_per_share_basic': 3.0, 'earnings_per_share_diluted': 2.98, 'shares_used_in_computing_eps_basic': 19821510, 'shares_used_in_computing_eps_diluted': 20000435}\n",
+      "{'report_date': '2019-09-28', 'section': 'profit_and_loss', 'net_sales_products': 213883, 'net_sales_services': 46291, 'net_sales_total': 260174, 'cost_of_sales_products': 144996, 'cost_of_sales_services': 16786, 'cost_of_sales_total': 161782, 'gross_margin': 98392, 'operating_expenses_research_and_development': 16217, 'operating_expenses_selling_general_and_administrative': 18245, 'operating_expenses_total': 34462, 'operating_income': 63930, 'other_income_or_expense_net': 1807, 'income_before_tax': 65737, 'tax_provision': 10481, 'net_income': 55256, 'earnings_per_share_basic': 2.99, 'earnings_per_share_diluted': 2.97, 'shares_used_in_computing_eps_basic': 18471336, 'shares_used_in_computing_eps_diluted': 18595651}\n",
+      "{'report_date': '2020-09-26', 'section': 'profit_and_loss', 'net_sales_products': 220747, 'net_sales_services': 53768, 'net_sales_total': 274515, 'cost_of_sales_products': 151286, 'cost_of_sales_services': 18273, 'cost_of_sales_total': 169559, 'gross_margin': 104956, 'operating_expenses_research_and_development': 18752, 'operating_expenses_selling_general_and_administrative': 19916, 'operating_expenses_total': 38668, 'operating_income': 66288, 'other_income_or_expense_net': 803, 'income_before_tax': 67091, 'tax_provision': 9680, 'net_income': 57411, 'earnings_per_share_basic': 3.31, 'earnings_per_share_diluted': 3.28, 'shares_used_in_computing_eps_basic': 17352119, 'shares_used_in_computing_eps_diluted': 17528214}\n",
+      "{'report_date': '2021-09-25', 'section': 'profit_and_loss', 'net_sales_products': 297392, 'net_sales_services': 68425, 'net_sales_total': 365817, 'cost_of_sales_products': 192266, 'cost_of_sales_services': 20715, 'cost_of_sales_total': 212981, 'gross_margin': 152836, 'operating_expenses_research_and_development': 21914, 'operating_expenses_selling_general_and_administrative': 21973, 'operating_expenses_total': 43887, 'operating_income': 108949, 'other_income_or_expense_net': 258, 'income_before_tax': 109207, 'tax_provision': 14527, 'net_income': 94680, 'earnings_per_share_basic': 5.67, 'earnings_per_share_diluted': 5.61, 'shares_used_in_computing_eps_basic': 16701272, 'shares_used_in_computing_eps_diluted': 16864919}\n",
+      "{'report_date': '2022-09-24', 'section': 'profit_and_loss', 'net_sales_products': 316199, 'net_sales_services': 78129, 'net_sales_total': 394328, 'cost_of_sales_products': 201471, 'cost_of_sales_services': 22075, 'cost_of_sales_total': 223546, 'gross_margin': 170782, 'operating_expenses_research_and_development': 26251, 'operating_expenses_selling_general_and_administrative': 25094, 'operating_expenses_total': 51345, 'operating_income': 119437, 'other_income_or_expense_net': -334, 'income_before_tax': 119103, 'tax_provision': 19300, 'net_income': 99803, 'earnings_per_share_basic': 6.15, 'earnings_per_share_diluted': 6.11, 'shares_used_in_computing_eps_basic': 16215963, 'shares_used_in_computing_eps_diluted': 16325819}\n",
+      "{'report_date': '2023-09-30', 'section': 'profit_and_loss', 'net_sales_products': 298085, 'net_sales_services': 85200, 'net_sales_total': 383285, 'cost_of_sales_products': 189282, 'cost_of_sales_services': 24855, 'cost_of_sales_total': 214137, 'gross_margin': 169148, 'operating_expenses_research_and_development': 29915, 'operating_expenses_selling_general_and_administrative': 24932, 'operating_expenses_total': 54847, 'operating_income': 114301, 'other_income_or_expense_net': -565, 'income_before_tax': 113736, 'tax_provision': 16741, 'net_income': 96995, 'earnings_per_share_basic': 6.16, 'earnings_per_share_diluted': 6.13, 'shares_used_in_computing_eps_basic': 15744231, 'shares_used_in_computing_eps_diluted': 15812547}\n",
+      "{'report_date': '2024-09-28', 'section': 'profit_and_loss', 'net_sales_products': 294866, 'net_sales_services': 96169, 'net_sales_total': 391035, 'cost_of_sales_products': 185233, 'cost_of_sales_services': 25119, 'cost_of_sales_total': 210352, 'gross_margin': 180683, 'operating_expenses_research_and_development': 31370, 'operating_expenses_selling_general_and_administrative': 26097, 'operating_expenses_total': 57467, 'operating_income': 123216, 'other_income_or_expense_net': 269, 'income_before_tax': 123485, 'tax_provision': 29749, 'net_income': 93736, 'earnings_per_share_basic': 6.11, 'earnings_per_share_diluted': 6.08, 'shares_used_in_computing_eps_basic': 15343783, 'shares_used_in_computing_eps_diluted': 15408095}\n"
+     ]
+    }
+   ],
+   "source": [
+    "import json\n",
+    "with open(\"structured_data_all.json\", \"r\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "if isinstance(data, list):\n",
+    "    # Flatten each record in the list.\n",
+    "    flattened_data = [flatten_json(record) for record in data]\n",
+    "else:\n",
+    "    flattened_data = flatten_json(data)\n",
+    "\n",
+    "# Print the flattened JSON objects (or use them as needed)\n",
+    "for item in flattened_data:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9eec4895",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'Metric': 'sales growth', '2014': 'N/A', '2015': '27.86%', '2016': '-7.73%', '2017': '6.3%', '2018': '15.86%', '2019': '-2.04%', '2020': '5.51%'}\n",
+      "{'Metric': 'gross margin', '2014': '61.41%', '2015': '59.94%', '2016': '60.92%', '2017': '61.53%', '2018': '61.66%', '2019': '62.18%', '2020': '61.77%'}\n",
+      "{'Metric': 'COGS_perc_sales', '2014': '38.59%', '2015': '40.06%', '2016': '39.08%', '2017': '38.47%', '2018': '38.34%', '2019': '37.82%', '2020': '38.23%'}\n",
+      "{'Metric': 'rnd_perc_sales', '2014': '3.3%', '2015': '3.45%', '2016': '4.66%', '2017': '5.05%', '2018': '5.36%', '2019': '6.23%', '2020': '6.83%'}\n",
+      "{'Metric': 'rnd_growth', '2014': 'N/A', '2015': '4.44%', '2016': '34.96%', '2017': '8.45%', '2018': '6.1%', '2019': '16.29%', '2020': '9.59%'}\n",
+      "{'Metric': 'sng_perc_sales', '2014': '6.56%', '2015': '6.13%', '2016': '6.58%', '2017': '6.66%', '2018': '6.29%', '2019': '7.01%', '2020': '7.25%'}\n",
+      "{'Metric': 'income_margin', '2014': '28.72%', '2015': '30.48%', '2016': '27.84%', '2017': '26.76%', '2018': '26.69%', '2019': '24.57%', '2020': '24.15%'}\n",
+      "{'Metric': 'ebt', '2014': '29.26%', '2015': '31.03%', '2016': '28.46%', '2017': '27.96%', '2018': '27.45%', '2019': '25.27%', '2020': '24.44%'}\n",
+      "{'Metric': 'tax_margin', '2014': '7.64%', '2015': '8.18%', '2016': '7.27%', '2017': '6.87%', '2018': '5.03%', '2019': '4.03%', '2020': '3.53%'}\n",
+      "{'Metric': 'net_margin', '2014': '21.61%', '2015': '22.85%', '2016': '21.19%', '2017': '21.09%', '2018': '22.41%', '2019': '21.24%', '2020': '20.91%'}\n",
+      "{'Metric': 'margin_growth', '2014': 'N/A', '2015': '5.7%', '2016': '-7.26%', '2017': '-0.45%', '2018': '6.27%', '2019': '-5.25%', '2020': '-1.53%'}\n",
+      "{'Metric': 'eps_growth', '2014': 'N/A', '2015': '42.99%', '2016': '-10.02%', '2017': '11.02%', '2018': '-67.64%', '2019': '-0.33%', '2020': '10.7%'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "with open(\"output.json\", \"r\") as f:\n",
+    "    data = json.load(f)\n",
+    "\n",
+    "if isinstance(data, list):\n",
+    "    # Flatten each record in the list.\n",
+    "    flattened_data = [flatten_json(record) for record in data]\n",
+    "else:\n",
+    "    flattened_data = flatten_json(data)\n",
+    "\n",
+    "# Print the flattened JSON objects (or use them as needed)\n",
+    "for item in flattened_data:\n",
+    "    print(item)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "05759a41",
    "metadata": {},
    "outputs": [],
    "source": []
